--- a/vark_quiz/quiz/static/css/stylehome.css
+++ b/vark_quiz/quiz/static/css/stylehome.css
@@ -135,7 +135,7 @@ h1 {
 }
 .main{
     min-height: 100vh;
-    
+    background: url("../img/img1.jpg") no-repeat;
     background-size: cover;
     background-position: center;
     pointer-events: auto;
