--- a/vark_quiz/quiz/templates/quiz/home.html
+++ b/vark_quiz/quiz/templates/quiz/home.html
@@ -8,7 +8,7 @@
     <title>Home</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/stylehome.css' %}">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    {% comment %} <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> {% endcomment %}
 </head>
 
 <body>
