--- a/vark_quiz/accounts/templates/accounts/login.html
+++ b/vark_quiz/accounts/templates/accounts/login.html
@@ -13,21 +13,23 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
+    
     <div class="wrapper">
-        <form action="">
+        <form method="post" action="{% url 'login' %}">
+            {% csrf_token %}
             <h1>Login</h1>
             <div class="input-box">
-                <input type="text" placeholder="Username"
+                <input type="text" name="username" placeholder="Username"
                 required>
                 <i class='bx bxs-user'></i>
             </div>
             <div class="input-box">
-                <input type="password" placeholder="Password"
+                <input type="password" name="password" placeholder="Password"
                 required>
                 <i class='bx bxs-lock-alt'></i>
             </div>
             <div class="remember-forgot">
-                <label><input type="checkbox">Remember me</label>
+                <label><input type="checkbox" name="remember_me">Remember me</label>
                 <a href="#">Forgot password?</a>
             </div>
 
