lina fixed the css

--- a/vark_quiz/quiz/templates/quiz/home.html
+++ b/vark_quiz/quiz/templates/quiz/home.html
@@ -49,14 +49,12 @@
                     </div>
                 </div>
             </section>
-            <section class="hero">
-                <div class="content">
-                    <p class="subtitle">LET'S START THE GAME!</p>
-                    <h1>Elevate Your Trivia Game to New Heights</h1>
-                    <p class="description">Take your love for trivia to the next level with our immersive quiz experience. Challenge yourself, compete with friends, and become a part of the global trivia community today!</p>
-                    <div class="cta-buttons">
-                        <button class="play-now">Play Now</button>
-                    </div>
+            <section class="home">
+                <div class="home-content">
+                    <h1>let's start the quiz!</h1>
+                    <p>Elevate Your Trivia Game to New Heights</p>
+                    <button class="play-now">Play Now</button>
+                    
                 </div>
             </section>
         </div>
