--- a/vark_quiz/accounts/templates/accounts/login.html
+++ b/vark_quiz/accounts/templates/accounts/login.html
@@ -1,46 +1,39 @@
+<!-- filepath: /home/bero/vark-quiz/vark_quiz/accounts/templates/accounts/login.html -->
 {% load static %}
 <!DOCTYPE html>
-<htlm lang="en">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-U-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        Login From in HTML and CSS | Codehal
-    </title>
+    <title>Login Form in HTML and CSS | Codehal</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    
     <div class="wrapper">
         <form method="post" action="{% url 'login' %}">
             {% csrf_token %}
             <h1>Login</h1>
             <div class="input-box">
-                <input type="text" name="username" placeholder="Username"
-                required>
+                <input type="email" name="email" placeholder="Email" required>
                 <i class='bx bxs-user'></i>
             </div>
             <div class="input-box">
-                <input type="password" name="password" placeholder="Password"
-                required>
+                <input type="password" name="password" placeholder="Password" required>
                 <i class='bx bxs-lock-alt'></i>
             </div>
             <div class="remember-forgot">
                 <label><input type="checkbox" name="remember_me">Remember me</label>
                 <a href="#">Forgot password?</a>
             </div>
-
             <button type="submit" class="btn">Login</button>
             <div class="register-link">
-                <p>Don't have anaccount?<a href="{% url 'register' %}" class="smooth-link">Register</a></p>
+                <p>Don't have an account? <a href="{% url 'register' %}" class="smooth-link">Register</a></p>
             </div>
-
         </form>
-
     </div>
     <script src="{% static 'js/newFile.js' %}"></script>
-</body>    
-</htlm>
+</body>
+</html>
