--- a/vark_quiz/quiz/static/css/stylehome.css
+++ b/vark_quiz/quiz/static/css/stylehome.css
@@ -51,7 +51,7 @@
 .navbar a:hover{
     color: #85008a;
 }
-.auth-buttons button{
+.auth-bu button{
     margin-left: 15px;
     padding: 10px 20px;
     font-size: 1em;
@@ -215,7 +215,7 @@ body{
     background: #85008ad2;
     border-color: #85008ad2;
 }
-.quiz-section{
+.section-quiz{
     position: relative;
     left: -50%;
     width: 100%;
@@ -227,11 +227,11 @@ body{
     transition-delay: .25s;
     z-index: 1000;
 }
-.quiz-section.active{
+.section-quiz.active{
     left: 0; 
 }
 
-.quiz-section .quiz-box{
+.section-quiz .box-quiz{
     position: relative;
     width: 500px;
     background: transparent;
@@ -241,13 +241,13 @@ body{
     flex-direction: column;
     padding: 20px 30px;
 }
-.quiz-box h1{
+.box-quiz h1{
     font-size: 32px;
     text-align: center;
     background: linear-gradient(45deg ,transparent, #bf03d8, transparent );
     border-radius: 6px;
 }
-.quiz-box .quiz-header{
+.box-quiz .header-quiz{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -255,11 +255,11 @@ body{
     border-bottom: 2px solid #bf03d8 ;
     margin-bottom: 30px;
 }
-.quiz-header span{
+.header-quiz span{
     font-size: 18px;
     font-weight: 500;
 }
-.quiz-box .question-text{
+.box-quiz .question-text{
     font-size: 24px;
     font-weight: 600;
 }
