--- a/vark_quiz/quiz/templates/quiz/home.html
+++ b/vark_quiz/quiz/templates/quiz/home.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     {% load static %}
+    {% load bootstrap5 %}
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
     <link rel="stylesheet" href="{% static 'css/stylehome.css' %}">
     {% comment %} <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> {% endcomment %}
     <script>
@@ -27,14 +30,14 @@
             <div class="auth-buttons">
                 {% if user.is_authenticated %}
                     <a href="{% url 'logout' %}">
-                        <button class="auth-button logout">Log Out</button>
+                        <button class="auth-bu logout">Log Out</button>
                     </a>
                 {% else %}
                     <a href="{% url 'login' %}">
-                        <button class="auth-button login">Log In</button>
+                        <button class="auth-bu login">Log In</button>
                     </a>
                     <a href="{% url 'register' %}">
-                        <button class="auth-button signup">Sign Up</button>
+                        <button class="auth-bu signup">Sign Up</button>
                     </a>
                 {% endif %}
                 <select class="lang">
@@ -65,22 +68,21 @@
                 }
                 </style>
         </header>
-        {% comment %} <div class="container">
+        <div class="container">
             {% if messages %}
                 <div class="messages">
                     {% for message in messages %}
-                        <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">
-                            {{ message }}
-                        </div>
+                    <div class="alert alert-primary" role="alert">
+                        A simple primary alert—check it out!
+                      </div>
                     {% endfor %}
                 </div>
-            {% endif %} {% endcomment %}
+            {% endif %}
         <div class="container">
-            {% if user.is_authenticated %}
-            <section class="quiz-section">
-                <div class="quiz-box">
+            <section class="section-quiz">
+                <div class="box-quiz">
                     <h1>Codehal Quiz</h1>
-                    <div class="quiz-header">
+                    <div class="header-quiz">
                         <span>Quiz Website Tutorials</span>
                     </div>
                     <h2 class="question-text"></h2>
@@ -90,9 +92,6 @@
                     </div>
                 </div>
             </section>
-            {% else %}
-                <p>Please <a href="{% url 'login' %}">log in</a> to access the quiz.</p>
-            {% endif %}
             <section class="home">
                 <div class="home-content">
                     <h1>let's start the quiz!</h1>
