--- a/vark_quiz/quiz/templates/quiz/about.html
+++ b/vark_quiz/quiz/templates/quiz/about.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +8,7 @@
     <title>Amelia Portfolio</title>
     <!-- <link rel="stylesheet" href="aboutus.css"> -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="about.css"> <!-- Ensure to link the updated CSS -->
+    <link rel="stylesheet" href="{% static 'css/about.css' %}"> <!-- Ensure to link the updated CSS -->
 </head>
 <body>
     <nav>
@@ -16,8 +17,8 @@
                 <span>Quiz</span>
             </div>
             <div class="links">
-                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100"><a href="home.html">Home</a></div>
-                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200"><a href="#">About</a></div>
+                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100"><a href="{% url 'home' %}">Home</a></div>
+                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200"><a href="{% url 'about' %}">About</a></div>
                 <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400"><a href="#">Services</a></div>
                 <div class="link contact-btn" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600"><a href="#">Contact Us</a></div>
             </div>
@@ -25,8 +26,8 @@
         </div>
         <div class="dropdown">
             <div class="links">
-                <a href="home.html">Home</a>
-                <a href="">About</a>
+                <a href="{% url 'home' %}">Home</a>
+                <a href="{% url 'about' %}">About</a>
                 <a href="">Services</a>
                 <a href="">Contact Us</a>
                 <i class="fa-solid fa-xmark cancel" onclick="cancel()"></i>
@@ -37,7 +38,7 @@
         <section class="left-section">
             <div class="main-container">
                 <div class="image" data-aos="zoom-in-right" data-aos-duration="2500">
-                    <img src="lina1.jpg" alt="">
+                    <img src="{% static 'img/lina1.jpg' %}" alt="">
                 </div>
                 <div class="content">
                     <h1 data-aos="fade-left" data-aos-duration="1000" data-aos-delay="800">Hey I'm <span>Lina</span></h1>
@@ -56,7 +57,7 @@
         <section class="right-section">
             <div class="main-container">
                 <div class="image" data-aos="zoom-in-left" data-aos-duration="2500">
-                    <img src="ebram1.jpg" alt="">
+                    <img src="{% static 'img/ebram1.jpg' %}" alt="">
                 </div>
                 <div class="content">
                     <h1 data-aos="fade-right" data-aos-duration="1000" data-aos-delay="800">Hey I'm <span>Ebram</span></h1>
