fixed the result page

--- a/vark_quiz/quiz/static/css/styleresult.css
+++ b/vark_quiz/quiz/static/css/styleresult.css
@@ -52,3 +52,9 @@ h1 {
 .result p {
     margin: 5px 0;
 }
+
+.next-btn.active {
+    background-color: #4CAF50; /* Green */
+    color: white;
+    transition: background-color 0.3s ease;
+}
