--- a/vark_quiz/quiz/templates/quiz/home.html
+++ b/vark_quiz/quiz/templates/quiz/home.html
@@ -74,7 +74,7 @@
                         <!-- Questions and answers will be rendered here -->
                     </div>
                     <div class="quiz-footer">
-                        <button class="next-btn">Next</button>
+                        <button id="next-btn" class="next-btn">Next</button>
                     </div>
                 </div>
             </section>
