--- a/vark_quiz/quiz/templates/quiz/home.html
+++ b/vark_quiz/quiz/templates/quiz/home.html
@@ -19,8 +19,6 @@
             <nav class="navbar">
                 <a href="{% url 'home' %}">Home</a>
                 <a href="{% url 'about' %}">About us</a>
-                <a href="#">Contact</a>
-                <a href="#">Service</a>
             </nav>
             <div class="auth-buttons">
                 {% if user.is_authenticated %}
@@ -35,11 +33,11 @@
                         <button class="auth-button signup">Sign Up</button>
                     </a>
                 {% endif %}
-                <select class="lang">
+                {% comment %} <select class="lang">
                     <option value="en" selected>EN</option>
                     <option value="fr">FR</option>
                     <option value="es">ES</option>
-                </select>
+                </select> {% endcomment %}
             </div>
             <style>
                 .auth-buttons {
