--- a/vark_quiz/quiz/templates/quiz/about.html
+++ b/vark_quiz/quiz/templates/quiz/about.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
     <title>about us</title>
-    <!-- <link rel="stylesheet" href="aboutus.css"> -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="{% static 'css/about.css' %}"> <!-- Ensure to link the updated CSS -->
+    <link rel="stylesheet" href="{% static 'css/about.css' %}">
 </head>
 <body>
     <nav>
