--- a/vark_quiz/quiz/templates/quiz/home.html
+++ b/vark_quiz/quiz/templates/quiz/home.html
@@ -1,4 +1,3 @@
-<!-- filepath: /home/bero/vark-quiz/vark_quiz/quiz/templates/quiz/home.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -64,7 +63,7 @@
         <div class="container">
             <section class="quiz-section">
                 <div class="quiz-box">
-                    <h1>Codehal Quiz</h1>
+                    <h1>Vark Quiz</h1>
                     <div class="quiz-header">
                         <span>Quiz Website Tutorials</span>
                     </div>
@@ -79,7 +78,7 @@
             <section class="home">
                 <div class="home-content">
                     <h1>Let's start the quiz!</h1>
-                    <p>Elevate Your Trivia Game to New Heights</p>
+                    <p>Learn more efficiently</p>
                     <button class="play-now">Play Now</button>
                 </div>
             </section>
