--- a/vark_quiz/quiz/templates/quiz/result.html
+++ b/vark_quiz/quiz/templates/quiz/result.html
@@ -1,4 +1,3 @@
-<!-- filepath: /home/bero/vark-quiz/vark_quiz/quiz/templates/quiz/result.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,14 +10,14 @@
 <body>
     <main class="main">
         <header class="header">
-            <a href="{% url 'home' %}" class="logo">Quiz</a>
+            <a href="{% url 'home' %}" class="logo">Vark Quiz</a>
             <nav class="navbar">
                 <a href="{% url 'home' %}">Home</a>
                 <a href="{% url 'about' %}">About us</a>
             </nav>
         </header>
         <div class="container">
-            <h1>Quiz Results</h1>
+            <h1>Quiz Results for {{user.username}}</h1>
             <div id="results-summary">
                 {% if results.total_questions %}
                     <p>You have been given {{ results.total_questions }} questions and the results are:</p>
